# smolcluster

./: README.md  pyproject.toml  test_router_param.py
checkpoints/grpo-summarization-length-quality-meteor/latest/: README.md
docs/: api.md  configuration.md  inference.md  logging.md  manual.md  quickstart.md  training.md
logging/: docker-compose.yml  promtail-config.yaml  promtail-server-remote.yaml  promtail-worker-remote.yaml
scripts/inference/: launch_api.sh  launch_inference.sh
scripts/inference/data_parallelism/: launch_classicdp_inference.sh  launch_syncps_inference.sh
scripts/inference/model_parallelism/: launch_inference.sh  launch_mp_inference.sh
scripts/installations/: discover_network.sh  installation.sh  setup.sh  setup_jetson.sh  setup_ssh.sh  vllm_install.sh
scripts/lib/: logging_helpers.sh  node_helpers.sh
scripts/training/: launch_dp_train_gpt.sh  launch_edp_demo.sh  launch_edp_train_gpt.sh  launch_ep_train_moe.sh  launch_fsdp_train_gpt.sh  launch_mp_pipeline_train_gpt.sh  launch_mp_train_gpt.sh  launch_syncps_train_gpt.sh
src/smolcluster/: train.py
src/smolcluster/algorithms/DataParallelism/SynchronousPS/: server.py
src/smolcluster/algorithms/EDP/: server.py
src/smolcluster/algorithms/ExpertParallelism/: worker.py
src/smolcluster/algorithms/FSDP/: worker_stage0.py  worker_stage1.py  worker_stage2.py
src/smolcluster/algorithms/ModelParallelism/: server.py  worker.py
src/smolcluster/applications/infer/: __main__.py  run.py
src/smolcluster/chat/backend/: api.py
src/smolcluster/chat/frontend/: index.html
src/smolcluster/configs/: cluster_config_classicdp.yaml  cluster_config_ep.yaml  cluster_config_fsdp.yaml  cluster_config_mp.yaml  cluster_config_syncps.yaml  gpt_config.yaml  moe_config.yaml
src/smolcluster/configs/inference/: cluster_config_inference.yaml  model_config_inference.yaml
src/smolcluster/dashboard/: __main__.py  node_manager.py  server.py
src/smolcluster/dashboard/frontend/: app.js  index.html  styles.css
src/smolcluster/data/: prepare_dataset.py
src/smolcluster/models/: __init__.py  moe.py
src/smolcluster/tests/: README.md  conftest.py  test_expert_parallelism.py  test_moe.py
src/smolcluster/utils/: common_utils.py  discovery.py  layers.py  logging_startup.py  logging_utils.py
(+35 files in other folders)
